cron_output.log
  File "/home/brysen/projects/myscripts/check_schedule.py", line 214
    msg = EmailMessage()
                        ^
IndentationError: unindent does not match any outer indentation level
  File "/home/brysen/projects/myscripts/check_schedule.py", line 214
    msg = EmailMessage()
                        ^
IndentationError: unindent does not match any outer indentation level
  File "/home/brysen/projects/myscripts/check_schedule.py", line 214
    msg = EmailMessage()
                        ^
IndentationError: unindent does not match any outer indentation level
found wednesday pdf: https://kvapack.ca/wp-content/uploads/sites/3620/2025/11/Adult-Indoor-Sub-List-2025_2026-Coed-Monday.pdf
